<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="40dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/google_sans_flex_variable_font"
            android:gravity="center_horizontal"
            android:text="@string/escolha_modo_produtor"
            android:textColor="@color/texto"
            android:textFontWeight="500"
            android:textSize="28sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:fontFamily="@font/google_sans_flex_variable_font"
            android:gravity="center_horizontal"
            android:text="@string/escolha_sem_loja"
            android:textColor="@color/texto"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnCadastrarLoja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/arace_blue"
            android:fontFamily="@font/google_sans_flex_variable_font"
            android:paddingVertical="14dp"
            android:text="@string/escolha_cadastrar_nova_loja"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnEntrarLoja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/verdeArace"
            android:fontFamily="@font/google_sans_flex_variable_font"
            android:paddingVertical="14dp"
            android:text="@string/entrar_loja_existente"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/btnVoltarEscolha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/google_sans_flex_variable_font"
            android:text="@string/voltar"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
